@@ -1,7 +1,7 @@
 Package: rfUtilities
 Title: Random Forests Model Selection and Performance Evaluation
-Version: 2.0-0
-Date: 2016-04-26
+Version: 2.0-1
+Date: 2017-03-23
 Authors@R: c(
 	person("Jeffrey S.", "Evans", role = c("cre", "aut"),  email = "jeffrey_evans@tnc.org"),
 	person("Melanie A.", "Murphy", role = "ctb") )
@@ -12,12 +12,11 @@ Depends: R (>= 3.2.1)
 Imports: randomForest (>= 4.6-10)
 Maintainer: Jeffrey S. Evans <jeffrey_evans@tnc.org>
 License: GPL-3
-URL: http://cran.r-project.org/package=rfUtilities
 NeedsCompilation: no
 Repository: CRAN
 LazyData: true
-RoxygenNote: 5.0.1
-Packaged: 2016-04-26 23:13:32 UTC; jevans
+RoxygenNote: 6.0.1
+Packaged: 2017-03-23 17:00:29 UTC; jeffrey_evans
 Author: Jeffrey S. Evans [cre, aut],
   Melanie A. Murphy [ctb]
-Date/Publication: 2016-04-27 13:31:07
+Date/Publication: 2017-03-23 17:14:26 UTC
