@@ -1,4 +1,4 @@
-d41ef504cf81ce61c50a7069018676f8 *DESCRIPTION
+9c099d14c68d57085828bc01dfdc5cd1 *DESCRIPTION
 2660f0ce43f136d5c3ccb401e5c195ad *NAMESPACE
 9803316f2194838f583cf2fa76b2fc64 *R/accuracy.R
 7fa360db89c9313605080558837a55ab *R/multi.collinear.R
@@ -14,10 +14,10 @@ d2a3406b2733d3f1b6b428ea9df1f695 *R/print.rf.fit.R
 72663fee3f377d6aefb029eeee6a6738 *R/print.rf.modelSel.R
 9c8a961498fe597807fe6ff7ba61891f *R/print.significance.R
 1224adb057a11d2cb8303b90df850cc5 *R/rf.class.sensitivity.R
-88cf98d578d739f913d5916f7da7a9b4 *R/rf.classBalance.R
-7012aaa190f8d96ee0ea483dbf5afe84 *R/rf.crossValidation.R
+5772b1b1e8bc3484081e8ba8859b3f86 *R/rf.classBalance.R
+1a4e1e06c633b22f06c4620bceda640a *R/rf.crossValidation.R
 2beb306736abeb471ff77a8fc7e0bc7a *R/rf.imp.freq.R
-c125fff7ed7aa54a89948976e9b463a1 *R/rf.modelSel.R
+4b53ff53c41e7fb180ffd32958729b87 *R/rf.modelSel.R
 880f1a9e25e44644d161c8327755d291 *R/rf.partial.ci.R
 ec8ecb728f5694c0b5ffb2d484af7b33 *R/rf.partial.prob.R
 1a502900efd1d5f4738590e8e6dd2047 *R/rf.regression.fit.R
@@ -29,32 +29,32 @@ fbda0b4b18b673d59150cf34fd104de3 *R/summary.accuracy.R
 2de159f5cf5c1cf75bcb4646ac3c345e *R/summary.rf.modelSel.R
 aebd77c01614d7eb356a37722e1cc0c5 *R/summary.significance.R
 1915495193b3ee576fa87c35aba89668 *R/zzz.R
-4208082bd7d08417ed1df90e9b2b9011 *inst/CITATION
-2c80fcd10cb77fd0d55393eadd068837 *inst/NEWS
-53fae91974118e955ec1ad6385cb863e *man/accuracy.Rd
-43e6b1c5ba796b7b5a459404a0e37acb *man/multi.collinear.Rd
-854b315174d6d72dc3d68453162ad1f9 *man/occurrence.threshold.Rd
-2dd0555d16342e5d7c31cccd0c789295 *man/plot.occurrence.threshold.Rd
-1862fb54db02010d6e44200d7acdf94b *man/plot.rf.cv.Rd
-80b64cf3b1db45a840dba325f301faef *man/plot.rf.modelSel.Rd
-774fe61f9ea0f4a7e3f8b137ca99ef62 *man/plot.significance.Rd
-1fbfdb253cfbd6c2f9124c7592e958f3 *man/print.accuracy.Rd
-fb74314530ae04b9e15267ba97becdab *man/print.occurrence.threshold.Rd
-5d5f9c14b3b21322632ada455f93d9af *man/print.rf.cv.Rd
-b618f5e2b69c6f13ccde51edc55dedda *man/print.rf.modelSel.Rd
-49be658b3f9a328fdfbab87efd9d6eed *man/print.significance.Rd
-05fb1d64de4407da53d8ba12f384ff24 *man/rf.class.sensitivity.Rd
-57ab230fd844982e104757b952114ff2 *man/rf.classBalance.Rd
-c9674db33de6d44df5a6ade9277f0142 *man/rf.crossValidation.Rd
-4daff32c35808517ece865fbc8757a2a *man/rf.imp.freq.Rd
-987e5b6ad4071d438d0941e512f32cfa *man/rf.modelSel.Rd
-2b7ea7929e56c6a4efe9abfffb455f05 *man/rf.partial.ci.Rd
-5bfc298ea8d5edf5a1ba277ca20b4eee *man/rf.partial.prob.Rd
-ee1c4f04a2d6afa6e305ab11f34513fa *man/rf.regression.fit.Rd
-a407c62e1d432b6d6dbb22f81584ddff *man/rf.significance.Rd
-8e2ed9ab7e4a7034fe67dc3716861c74 *man/rfu.news.Rd
-4a11cc77d8d75c15c3a19cbd68480aa4 *man/summary.accuracy.Rd
-9bc8c6e301015c78ad33f9b107c328ab *man/summary.occurrence.threshold.Rd
-265f6865e964292cce5dec2e6955aba3 *man/summary.rf.cv.Rd
-94c50c14f1b3114f11af9eeca2f433f6 *man/summary.rf.modelSel.Rd
-0a9802783527b27571582215ea93c163 *man/summary.significance.Rd
+6f7ec7d800a1e9686ba9866885a06d68 *inst/CITATION
+213d79605aaee1b2185542f128c72c7f *inst/NEWS
+3846d79be72e823254e2bd302ae0e6d6 *man/accuracy.Rd
+765a37d678bb05c2830debe5d4924653 *man/multi.collinear.Rd
+f319f0c232fc664407ad7988fc477db8 *man/occurrence.threshold.Rd
+606bd5bdf7ab2c346df6db937338b5ba *man/plot.occurrence.threshold.Rd
+9cd796ca21a96c4ad520bfffcc080ca3 *man/plot.rf.cv.Rd
+d386c2b3b4eb5926f13d6b1101c4778b *man/plot.rf.modelSel.Rd
+0dfa0eb45cc57d354455ef0866c8a54b *man/plot.significance.Rd
+b6739fb5c5c422f10c114f99e07df612 *man/print.accuracy.Rd
+0e38a243dc73afdbd6a92a54d29bc2e6 *man/print.occurrence.threshold.Rd
+c848a94e06b4e6b168bcdb692aa1d240 *man/print.rf.cv.Rd
+50bbf4fd4920178a0247c33ab421a1aa *man/print.rf.modelSel.Rd
+ada0cae21b3995ba12e9f094c040af3a *man/print.significance.Rd
+be2e2388e0ab0dbc70a2deb8c031bb95 *man/rf.class.sensitivity.Rd
+6e60dea2daad0a432e51190599b6aa3d *man/rf.classBalance.Rd
+820d157093c220141e3e0f492c20a9dc *man/rf.crossValidation.Rd
+5bb3a2c4db8eae88d78d4a6d0102fb10 *man/rf.imp.freq.Rd
+d3b45c6e5b4cd1182782f691f38890ac *man/rf.modelSel.Rd
+0449130d94abeb9cd7f934e77361a633 *man/rf.partial.ci.Rd
+2b98104ed5f8d3b359419b9571a92fc5 *man/rf.partial.prob.Rd
+b0be1664f5966ec16048fc8dae9069df *man/rf.regression.fit.Rd
+f728baed8b181bf6c80287adb3babfd6 *man/rf.significance.Rd
+758bedf6e844210b22d39848887dc5fd *man/rfu.news.Rd
+d4d67924eb85fff181bc55b9c0986b6b *man/summary.accuracy.Rd
+93344084b12c841ada9d984228245b79 *man/summary.occurrence.threshold.Rd
+edd4fe199641d86ac21c65342b632e44 *man/summary.rf.cv.Rd
+09d7ba02a8f5addcd1ad0072aa8129c0 *man/summary.rf.modelSel.Rd
+9b8b926f9dec50d9ef3883c53687cf77 *man/summary.significance.Rd
