@@ -14,4 +14,3 @@
 \description{
 Print method for occurrence.threshold objects
 }
-
