@@ -83,9 +83,6 @@ vars <- rf.regress$selvars
 ( rf.fit <- randomForest(x=airquality[,vars], y=airquality[,1]) )
 
 }
-\author{
-Jeffrey S. Evans  <jeffrey_evans@tnc.org>
-}
 \references{
 Evans, J.S. and S.A. Cushman (2009) Gradient Modeling of Conifer Species Using Random Forest. Landscape Ecology 5:673-683.
 
@@ -94,6 +91,8 @@ Murphy M.A., J.S. Evans, and A.S. Storfer (2010) Quantify Bufo boreas connectivi
 Evans J.S., M.A. Murphy, Z.A. Holden, S.A. Cushman (2011). Modeling species distribution and change using Random Forests CH.8 in Predictive Modeling in Landscape Ecology eds Drew, CA, Huettmann F, Wiersma Y. Springer
 }
 \seealso{
-\code{\link[randomForest]{randomForest}} for randomForest model options
+\code{\link[randomForest]{randomForest}} for randomForest ... model options
 }
-
+\author{
+Jeffrey S. Evans  <jeffrey_evans@tnc.org>
+}
