@@ -55,12 +55,11 @@ require(randomForest)
          }
 
 }
-\author{
-Jeffrey S. Evans    <jeffrey_evans<at>tnc.org>
-}
 \references{
 Evans J.S., M.A. Murphy, Z.A. Holden, S.A. Cushman (2011). Modeling species distribution and change using Random Forests CH.8 in Predictive Modeling in Landscape Ecology eds Drew, CA, Huettmann F, Wiersma Y. Springer
 
 Baruch-Mordo, S., J.S. Evans, J. Severson, J. D. Naugle, J. Kiesecker, J. Maestas, & M.J. Falkowski (2013) Saving sage-grouse from the trees: A proactive solution to reducing a key threat to a candidate species Biological Conservation 167:233-241
 }
-
+\author{
+Jeffrey S. Evans    <jeffrey_evans<at>tnc.org>
+}
